2017-08-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Fix bug #2640.

2017-08-13 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.c (cseBBlock),
	* src/SDCCptropt.c (ptrPostIncDecOpt, pattern1, pattern2),
	* src/SDCCptropt.h: fix bug #2459

2017-08-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c: fix bug #2624

2017-08-10 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdio.h,
	  device/lib/ds390/putchar.c:
	  Make getchar() prototype standard-compliant.
	* src/stm8/gen.c:
	  Improve I/O and bit toggling.

2017-08-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix ASMOP_A / ASMOP_ZERO initialization.

2017-08-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Improve use of register A.

2017-08-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/gen.h:
	  Refactor and optimize subtraction.
	* sim/ucsim/z80.src/inst_ed.cc,
	  sim/ucsim/z80.src/inst_ed_r2k.cc:
	  Fix negation.

2017-08-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve left shift.

2017-08-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.h,
	  src/z80/gen.c,
	  src/z80/ralloc.h,
	  src/z80/ralloc2.cc:
	  Handle register A more like other registers.
	* src/z80/peeph-z80.def:
	  Instructions in jump target for cheaper short jumps.

2017-08-01 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/gcc-torture-execute-20010224-1.c: re-enable

2017-07-31 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix a gbz80 codegen issue.

2017-07-31 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCmem.c (initMem),
	* src/hc08/gen.c (aopForSym): fix bug #2385
	* support/regression/tests/bug-2385.c: re-enable for all ports

2017-07-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve 16-bit left-shift by 7,